<resources>
    <string name="app_name">Volontulo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_list_title">Lista akcji</string>
    <string name="volunteer_list_title">Lista wolontariuszy</string>
    <string name="communicator_title">Komunikator</string>
    <string name="settings_title">Ustawienia</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="hint_activity_login_email">Email:</string>
    <string name="hint_activity_login_password">Password</string>
    <string name="text_activity_login_button">Zaloguj</string>
    <string name="error_wrong_email_or_password">Niepoprawny użytkownik lub hasło.</string>
    <string name="drawer_open">Rozwiń</string>
    <string name="drawer_close">Zwiń</string>

    <string name="add_offer">Dodaj akcję</string>
    <string name="edit_offer">Edytuj akcję</string>
    <string name="map_offers">Mapa akcji</string>
    <string name="attach_image">Dodaj obraz</string>
    <string name="offer_name">Tytuł oferty</string>
    <string name="offer_place">Miejsce odbywania wolontariatu</string>
    <string name="offer_description">Description</string>
    <string name="offer_time_requirement">Wymagania czasowe</string>
    <string name="offer_benefits">Korzyści</string>
    <string name="offer_requirements">Wymagania wobec wolontariusza</string>
    <string name="offer_save">Zapisz</string>
    <string name="title_activity_offers_details">Szczegóły akcji</string>

    <string name="volunteer_avatar">Awatar wolontariusza</string>
    <string name="offer_image_chooser">Wybierz obraz do akcji</string>
    <string name="offer_thumbnail">Miniaturka grafiki dołączonej do akcji</string>
    <string name="offer_thumbnail_delete">Usuń miniaturkę</string>

    <string name="offer_name_validate">Określ, jak oferta będzie nazywać się w systemie, staraj się być dokładnym.</string>
    <string name="offer_place_validate">Określ, w jakim miejscu odbywać się będzie wolontariat.</string>
    <string name="offer_description_validate">Postaraj się dokładnie opisać akcję.</string>
    <string name="offer_time_requirement_validate">Określ wymagania czasowe - ile godzin pracy w ciągu dnia wymaga dana akcja.</string>
    <string name="offer_benefits_validate">Określ korzyści płynące z udziału w akcji.</string>

    <string name="im_enter_message">Wpisz wiadomość</string>
    <string name="im_send_message">Wyślij wiadomość</string>
    <string name="im_conversation_with_title">Rozmowa z: %s</string>
    <string name="im_conversation_list_title">Lista konwersacji</string>
    <string name="im_conversation_scroll_down">Przejdź</string>
    <plurals name="im_new_messages">
        <item quantity="one">Nowa wiadomość</item>
        <item quantity="other">Nowe wiadomości (%d)</item>
    </plurals>
    <string name="chooser_volunteer_title">Napisz do:</string>
    <string name="chooser_volunteer_cancel">Anuluj</string>
    <string name="chooser_volunteer_select">Wybierz</string>
    <string name="chooser_select_one">Wybierz jedną osobę do której chcesz napisać wiadomość</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volunteer_data_name">Nazwa</string>
    <string name="volunteer_data_address">Adres</string>
    <string name="volunteer_data_description">Opis</string>
    <string name="volunteer_contact_phone">Telefon</string>
    <string name="volunteer_contact_desc">Opis</string>
    <string name="button_send_text">Wyślij</string>
    <string name="volunteer_contact_name">Twoje imię i nazwisko</string>
    <string name="volunteer_contact_email">Twój email</string>
    <string name="volunteer_detail_title">Profil Wolontariusza</string>
    <string name="now">teraz</string>
    <string name="to_set">do ustalenia</string>
    <string name="preference_key_is_logged">IS-LOGGED</string>
    <string name="preference_file_name">com.stxnext.volontulo:preference_file_name</string>
    <string name="preference_offers_position">OFFERS-POSITION</string>
    <string name="preference_offers_refresh">OFFERS-REFRESH</string>
    <string name="preference_highlight_users_offer">HIGHLIGHT-USERS-OFFERS</string>
    <string name="logout_title">Wyloguj</string>
    <string name="error_connection">Problemy z połączeniem...</string>
    <string name="error_something_wrong">Coś poszło nie tak...</string>
    <string name="offer_joined_message">"Zgłosiłeś się!!! "</string>
    <string name="error_organization_lack">Wolontariusz musi być przypisany do organizacji</string>
    <string name="attend_list_header">Uczestniczy w akcjach</string>
</resources>
