<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contact_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volunteer_contact_name"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contact_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volunteer_contact_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contact_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volunteer_contact_phone"
            android:maxLines="1"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contact_edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volunteer_contact_desc"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_send"
        android:text="@string/button_send_text"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>