<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offer_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_data"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:padding="6dp"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:contentDescription="@string/offer_thumbnail"
                tools:src="@drawable/ic_user_placeholder" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E9ED"
                android:text="@string/volunteer_data_name" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:singleLine="false"
                tools:text="Fundacja Małych Wielkich Rzeczy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E9ED"
                android:text="@string/volunteer_data_address"
                tools:text="Adres" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:singleLine="false"
                tools:text="bohater@gmail.com" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E9ED"
                android:text="@string/volunteer_data_description"
                android:visibility="gone"
                tools:text="Opis" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:singleLine="false"
                android:visibility="gone"
                tools:text="Istniejemy dla i wokół Małych i wielkich spraw, wartościowych ludzi. Lubimy podejmować wyzwania i ... zło zamieniać w dobro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E9ED"
                android:text="@string/volunteer_contact_phone"
                tools:text="Telefon" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:singleLine="false"
                tools:text="bohater@gmail.com" />

            <Button
                android:id="@+id/send_message_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/im_send_message" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/list_header"
        android:layout_below="@+id/header_data"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="Lista akcji w których uczestniczysz "/>

    </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>