<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stxnext.volontulo.ui.volunteers.VolunteerDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E9ED"
            android:text="@string/volunteer_data_name" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="false"
            tools:text="Fundacja Małych Wielkich Rzeczy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E9ED"
            android:text="@string/volunteer_data_address"
            tools:text="Adres" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="false"
            tools:text="bohater@gmail.com" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E9ED"
            android:text="@string/volunteer_data_description"
            tools:text="Opis" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="false"
            tools:text="Istniejemy dla i wokół Małych i wielkich spraw, wartościowych ludzi. Lubimy podejmować wyzwania i ... zło zamieniać w dobro" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
