<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E9ED"
            android:text="@string/volunteer_data_name" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            tools:text="Fundacja Małych Wielkich Rzeczy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_below="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E9ED"
            android:text="@string/volunteer_data_address"
            tools:text="Adres" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            tools:text="bohater@gmail.com" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_description"
        android:layout_below="@+id/layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E9ED"
            android:text="@string/volunteer_data_description"
            tools:text="Opis" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            tools:text="Istniejemy dla i wokół Małych i wielkich spraw, wartościowych ludzi. Lubimy podejmować wyzwania i ... zło zamieniać w dobro" />

    </LinearLayout>

</RelativeLayout>