<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/offer_add_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/offer_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_name"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <ViewSwitcher
                android:id="@+id/place_autocomplete_result_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureAllChildren="false">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <fragment
                        android:id="@+id/place_autocomplete_fragment"
                        android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal">

                            <android.support.v4.widget.Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <ImageButton
                                android:id="@+id/close_map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/places_ic_clear"
                                android:tint="@color/colorPrimary" />
                        </LinearLayout>

                        <fragment
                            android:id="@+id/map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="160dp"
                            app:liteMode="true"
                            app:mapType="normal" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </ViewSwitcher>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/offer_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_description"
                    android:inputType="textMultiLine"
                    android:lines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/offer_time_requirement_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_time_requirement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_time_requirement"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/offer_benefits_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offer_benefits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/offer_benefits"
                    android:inputType="textMultiLine"
                    android:lines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/offer_thumbnail_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/offer_thumbnail_name"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:textColor="?colorControlNormal"
                            tools:text="Filename.png" />

                        <ImageButton
                            android:id="@+id/offer_thumbnail_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/offer_thumbnail_delete"
                            android:src="@drawable/places_ic_clear"
                            android:tint="@color/colorPrimary" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/offer_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:contentDescription="@string/offer_thumbnail"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/cookie" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="?attr/dividerHorizontal" />

    <Button
        android:id="@+id/add_offer"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offer_save" />

</LinearLayout>